--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,11 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Connexion</h1>
-<form method="POST" action="{{ url_for('auth.login') }}">
-    {{ form.hidden_tag() }}
-    {{ form.pseudo.label }} {{ form.pseudo() }}
-    {{ form.password.label }} {{ form.password() }}
-    {{ form.submit() }}
-</form>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h2 class="text-center mb-4">Connexion</h2>
+            <form method="POST" action="{{ url_for('auth.login') }}">
+                {{ form.hidden_tag() }}
+                <div class="mb-3">
+                    {{ form.pseudo.label(class="form-label") }}
+                    {{ form.pseudo(class="form-control", placeholder="Votre pseudo") }}
+                </div>
+                <div class="mb-3">
+                    {{ form.password.label(class="form-label") }}
+                    {{ form.password(class="form-control", placeholder="Votre mot de passe") }}
+                </div>
+                <div class="d-grid gap-2">
+                    {{ form.submit(class="btn btn-primary") }}
+                </div>
+                <div class="mt-3 text-center">
+                    <p>Pas encore de compte ? <a href="{{ url_for('auth.register') }}">S'inscrire</a></p>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
