--- a/app/templates/etablissements.html
+++ b/app/templates/etablissements.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
- <h1>liste des établissements</h1>
+ <h1>Liste des établissements</h1>
 <ul>
-    {% for établissement in établissements %}
-    <li>{{ établissement.nom }}</li>
+    {% for établissement in etablissements %}
+    <li>{{ établissement.nom }} : {{ établissement.description }}</li>
     {% endfor %}
 </ul>
 {% endblock %}
