L'accueil redirige vers la liste des établissements

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,5 +10,6 @@
         </div>
     </div>
 </div>
-    Sens-toi accueilli
+    <a href="liste_etablissements.html">Hé mon ami, tu veux voir les bons lieux à flan ?</a>
+
 {% endblock %}
