--- a/app/templates/page_etablissement.html
+++ b/app/templates/page_etablissement.html
@@ -17,7 +17,7 @@
     </div>
 
     <!-- Grille des flans -->
-    <h2 class="section-title">Nos flans</h2>
+    <h2 class="section-title">Les flans</h2>
     {% if etablissement.flans %}
         <div class="flans-grid">
            {% for flan in etablissement.flans %}
@@ -30,21 +30,21 @@
         </div>
     {% endif %}
     <div class="card-content">
-        <div class="flan-header">
-            <h3>{{ flan.nom }}</h3>
-            <!-- Affichage du prix -->
-            {% if flan.evaluations %}
-                {% set dernier_prix = flan.evaluations|sort(attribute='date_creation', reverse=true)|first %}
-                <span class="flan-price">{{ "%.2f"|format(dernier_prix.prix) }} €</span>
-            {% else %}
-                <span class="flan-price">Prix non renseigné</span>
-            {% endif %}
-        </div>
-        <p class="flan-description">{{ flan.description or "Un délicieux flan maison" }}</p>
-        <div class="flan-actions">
-            <a href="{{ url_for('main.afficher_flan_unique', id_flan=flan.id_flan) }}" class="btn-details">Voir les détails</a>
-        </div>
+    <div class="flan-header">
+        <h3>{{ flan.nom }}</h3>
+        <!-- Affichage du prix -->
+        {% if flan.prix is not none %}
+            <span class="flan-price">{{ "%.2f"|format(flan.prix) }} €</span>
+        {% else %}
+            <span class="flan-price">Prix non renseigné</span>
+        {% endif %}
     </div>
+    <p class="flan-description">{{ flan.description or "Un flan flantastique" }}</p>
+    <div class="flan-actions">
+        <a href="{{ url_for('main.afficher_flan_unique', id_flan=flan.id_flan) }}" class="btn-details">Voir les détails</a>
+    </div>
+</div>
+
 </div>
 {% endfor %}
 
