C'est plus joli : ajout de la couleur et la font Bubblegum. /!\ ne prend pas en charge les accents !

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>PlanFlan</h1>
+        <h1>PLANFLAN</h1>
     </header>
     <nav>
         <a href="{{ url_for('main.index') }}">Accueil</a>
