--- a/app/templates/liste_etablissements.html
+++ b/app/templates/liste_etablissements.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-    <h1>Nos établissements</h1>
+    <h1>Les etablissements</h1>
 
     <div class="etablissements-grid">
         {% for etablissement in etablissements %}
