C'est plus joli : ajout de la couleur et la font Bubblegum. /!\ ne prend pas en charge les accents !

--- a/app/templates/evaluer_flan.html
+++ b/app/templates/evaluer_flan.html
@@ -8,7 +8,7 @@
 
     <!-- Bouton pour revenir au flan -->
     <div class="back-to-flan">
-        <a href="{{ url_for('main.afficher_flan_unique', id_flan=flan.id_flan) }}" class="btn-flan">
+        <a href="{{ url_for('main.afficher_flan_unique', id_flan=flan.id_flan) }}" class="btn-back">
             ← Retour au flan : {{ flan.nom }}
         </a>
     </div>
