Travail en cours sur la redirection après login

--- a/app/templates/flan.html
+++ b/app/templates/flan.html
@@ -19,7 +19,7 @@
                 Évaluer ce flan
             </a>
         {% else %}
-            <a href="{{ url_for('auth.login', next=request.url) }}" class="btn-evaluate">
+            <a href="{{ url_for('auth.login', next=url_for('main.evaluer_flan', id_flan=flan.id_flan)) }}" class="btn-evaluate"> <!-- next=url_for pour bien continuer sur l'évaluation du flan demandé -->
                 Évaluer ce flan (connectez-vous)
             </a>
         {% endif %}
