--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}PlanFlan{% endblock %}</title>
+    {% block scripts_head %}{% endblock %}
+
     <!-- Lien vers le fichier CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
